--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -1,3 +1,12 @@
+@mixin header{
+    text-align: center;
+    background-color: #F3F2E8;
+    text-decoration-line: none;
+    font-weight: bold;
+    transition: color 0.3s;
+    
+}
+
 @mixin main{
     display: flex;
     flex-direction: column;
@@ -8,6 +17,7 @@
 
 @mixin p{
     font-family: "Libre Baskerville", serif;
+    background-color: whitesmoke;
     color: black;
     margin: 10px;
     font-size: 1.2rem;
@@ -15,20 +25,6 @@
     width: 50%;
 }
 
-@mixin .galeria{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    max-width: 700px;
-    margin: 5px;
-}
-
-@mixin .galeria-img{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 10px;
-}
 
 @mixin img-redes{
     width: 70px;
