--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -17,12 +17,12 @@
 
 @mixin p{
     font-family: "Libre Baskerville", serif;
-    background-color: whitesmoke;
-    color: black;
+    color: orange;
     margin: 10px;
     font-size: 1.2rem;
     font-weight: bolder;
     width: 50%;
+    
 }
 
 
