--- a/sass/layout/_mq-movil.scss
+++ b/sass/layout/_mq-movil.scss
@@ -1,14 +1,7 @@
 // estilos de movil
 
 
-@media screen and (max-widht: 767px){
-    header{
-        text-align: center;
-        background-color: #F3F2E8;
-        text-decoration-line: none;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
+@media screen and (max-width: 767px){
 
     main{
         display: flex;
