--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,6 +1,6 @@
 // variables colores
 $body-bc: #DFF2DE;
-$link-nav-card: #F3F2E8;
+$link-nav-card: #bdbdb5;
 $boton-card: #2E6953;
 $tipografia-parrafo: #000000;
 $tipografia-h1: #4E9276;
