--- a/sass/layout/_mq-desktop.scss
+++ b/sass/layout/_mq-desktop.scss
@@ -1,14 +1,8 @@
 // estilos de desktop
 
 
-@media screen and (min-widht: 1024px){
-    header{
-        text-align: center;
-        background-color: #F3F2E8;
-        text-decoration-line: none;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
+@media screen and (min-width: 1024px){
+    
 
     main{
         display: flex;
