--- a/sass/layout/_mq-tablet.scss
+++ b/sass/layout/_mq-tablet.scss
@@ -1,15 +1,9 @@
 // estilos de tablet
 
 
-@media screen and (min-widht: 768px){
+@media screen and (min-width: 768px){
 
-    header{
-        text-align: center;
-        background-color: #F3F2E8;
-        text-decoration-line: none;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
+    
 
     main{
         display: flex;
