--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,8 +1,8 @@
 // variables colores
 $body-bc: #DFF2DE;
-$link-nav-card: #bdbdb5;
-$boton-card: #2E6953;
+$link-nav-card: #2E6953;
+$boton-card: #4faf8b;
 $tipografia-parrafo: #000000;
-$tipografia-h1: #4E9276;
+$tipografia-h1: #3e7e65;
 $tipografia-h2: #93CBA6;
-
+$primary:#F3F2E8;
