--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,18 @@ body {
   background-color: #DFF2DE;
 }
 
+header {
+  background-color: #F3F2E8;
+  font-weight: bolder;
+}
+header .navbar-nav .nav-link {
+  color: #2E6953;
+  font-weight: bold;
+}
+header .navbar-nav .nav-link:hover {
+  color: #4faf8b;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -17,7 +29,7 @@ main {
   text-align: center;
 }
 main h1 {
-  color: #4E9276;
+  color: #3e7e65;
 }
 main p {
   font-family: "Libre Baskerville", serif;
@@ -54,7 +66,7 @@ main .cards-container {
   flex-wrap: wrap;
 }
 main .cards-container .card {
-  background: #DFF2DE;
+  background: #F3F2E8;
   width: 300px;
   padding: 20px;
   border-radius: 15px;
@@ -207,20 +219,14 @@ footer .redes a img {
   }
 }
 @media screen and (min-width: 768px) {
-  main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  header .navbar .container {
+    justify-content: space-between;
   }
-  footer {
-    text-align: center;
+  header .navbar-toggler {
+    margin-left: auto;
   }
-  footer .redes a img {
-    width: 70px;
-    height: 70px;
-    margin: 20px;
+  main .lista {
+    margin-left: 2rem;
   }
 }
 @media screen and (min-width: 1024px) {
