--- a/sass/layout/_mq-tablet.scss
+++ b/sass/layout/_mq-tablet.scss
@@ -14,6 +14,28 @@
         .lista{
             margin-left: 2rem;
         }
+        .contenedor-sobremi{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .texto{
+                margin-top: 1rem;
+                p{
+                    margin-bottom: 2rem;
+                }
+            }
+            
+        }
+        .contenedor-sobremi-dos{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .texto-dos{
+                p{
+                    margin-bottom: 2rem;
+                }
+            }
+        }
     }
 }
 
