revisar para la ultima presentacion

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ main h1 {
 }
 main p {
   font-family: "Libre Baskerville", serif;
-  color: orange;
+  color: #F69489;
   margin: 10px;
   font-size: 1.2rem;
   font-weight: bolder;
@@ -44,7 +44,7 @@ main section div img {
   height: 40%;
 }
 main h2 {
-  color: violet;
+  color: #FCB871;
 }
 main div ul {
   list-style-position: inside;
@@ -277,20 +277,18 @@ footer .redes a img {
   }
 }
 @media screen and (min-width: 1024px) {
-  main {
-    display: flex;
-    flex-direction: column;
+  main .lista {
+    margin-left: 5rem;
+  }
+  main .contenedor-sobremi, main .contenedor-sobremi-dos {
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    text-align: center;
   }
-  footer {
-    text-align: center;
+  main .contenedor-sobremi .texto, main .contenedor-sobremi .texto-dos, main .contenedor-sobremi-dos .texto, main .contenedor-sobremi-dos .texto-dos {
+    margin: 0 2rem;
   }
-  footer .redes a img {
-    width: 70px;
-    height: 70px;
-    margin: 20px;
+  main .contenedor-sobremi .texto p, main .contenedor-sobremi .texto-dos p, main .contenedor-sobremi-dos .texto p, main .contenedor-sobremi-dos .texto-dos p {
+    margin-bottom: 0;
   }
 }
 
