--- a/sass/layout/_mq-desktop.scss
+++ b/sass/layout/_mq-desktop.scss
@@ -2,28 +2,25 @@
 
 
 @media screen and (min-width: 1024px){
-    
-
     main{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-
-    footer{
-        text-align: center;
-        .redes{
-            a{
-                img{
-                    width: 70px;
-                    height: 70px;
-                    margin: 20px;
+        // estilos de inicio
+        .lista{
+            margin-left: 5rem;
+        }
+        // estilos de sobre mi
+        .contenedor-sobremi, .contenedor-sobremi-dos{
+            flex-direction: row;
+            justify-content: center;
+            .texto, .texto-dos{
+                margin: 0 2rem;
+                p{
+                    margin-bottom: 0;
                 }
             }
         }
+        // estilos de servicios
+        
+        // estilos de contacto
+        
     }
-
-
 }
