--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -19,6 +19,9 @@
 
 
 @mixin img-redes{
+    display: inline-block;
+    margin: 0 10px;
+    text-decoration: none;
     width: 70px;
     height: 70px;
     margin: 20px;
